--- a/public/index.html
+++ b/public/index.html
@@ -4,22 +4,18 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicons/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter&family=Lato&display=swap"
-      rel="stylesheet"
-    />
+    <meta name="theme-color" content="#f6f9ff" />
+    <meta name="description" content="COMPACT PAY - Pay anywhere crypto is accepted" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicons/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-    <title>compact pay - Pay anywhere crypto is accepted</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Lato:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <title>COMPACT PAY - Pay anywhere crypto is accepted</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need to enable JavaScript to run this app in your browser or phone.</noscript>
     <div id="root"></div>
   </body>
 </html>
