--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicons/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#f6f9ff" />
-    <meta name="description" content="COMPACT PAY - Pay anywhere crypto is accepted" />
+    <meta
+      name="description"
+      content="COMPACT PAY - Pay anywhere crypto is accepted"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicons/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
@@ -15,7 +18,10 @@
     <title>COMPACT PAY - Pay anywhere crypto is accepted</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app in your browser or phone.</noscript>
+    <noscript
+      >You need to enable JavaScript to run this app in your browser or
+      phone.</noscript
+    >
     <div id="root"></div>
   </body>
 </html>
